	  - Reserved macro names are replaced.
	* bitstream.[ch]:
	  - Some variables' type changed from int to size_t. (closing #89 and
	    #102)
	* tests/common.[ch], tests/test_split_url.c:
	  - Fixed some warnings.
	* NEWS:
	  - Format fixes.
	* mask.[ch]:
	  - Some variables' type changed from int to unsigned int. (closing #89 and
	    #102)
	* tests/test_mask.c:
	  - Fixed some warnings.

2017.09.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* README.md:
	  - Format fixes.
	* rsecc.[ch]:
	  - Some variables' type changed from int to size_t. (closing #89 and
	    #102)

2017.09.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* qrencode.1.in, NEWS:
	  - Release date has been updated.
	  - Documentation updated.
	* Version 4.0.0 has ben released.

2017.09.11 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - Read buffer is now allocated as a static array to avoid malloc().
	    Suppresses memory leak warnings. (Thanks to @c-273)
	* README.md:
	  - INSTALL and ACKNOWLEDGMENTS sections are updated.
	* makeREADME.sh:
	  - Now it removes the attention line for github.com users.
	* tests/test_qrenc.sh:
	  - Experimental test script for the command 'qrencode'.
	  - Dedicated to @c-273, who warned the possible memory leaks of qrencode.
	    (See #102)
	* qrencode.spec.in, Makefile.am, configure.ac:
	  - SPEC file has been removed. (closes #105)
	* Makefile.am:
	  - The generation rule for README has been improved.
	[4.0]
	* 4.0 branch has been started.
	* README.md:
	  - Version number added to the 1st line.
	  - Fixed the URL to the badge of Travis CI.

2017.09.07 Kentaro Fukuchi <kentaro@fukuchi.org>
	* *.[ch]:
	  - Copyright year updated for the next major update.
	* tests/test_configure.sh:
	  - Added some progress messages.
	* tests/test_all.sh:
	  - Added test_configure.sh to the list.
	* Makefile.am, tests/Makefile.am:
	  - Added some EXTRA_DIST files.
	  - Moved some EXTRA_DIST files from Makefile.am to tests/Makefile.am.
	* makeREADME.sh:
	  - Newly added.